base/velero-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: velero-ui
  namespace: velero-ui
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
  labels:
    app.kubernetes.io/name: velero-ui
spec:
  rules:
  - host: velero.oostrandpark.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: velero-ui
            port:
              number: 3000
  tls:
  - hosts:
    - velero.oostrandpark.com
    secretName: velero-ui-tls
